--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,4 @@
-// Mixins Here
+.buttons(@ebony-clay,@porcelain){
+    background-color: @ebony-clay;
+    color: @porcelain;
+}
