--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,26 @@
-// Navigation code here
-a{
-    text-decoration: none;
+nav{
+    display:flex;
+    justify-content: center;
+    background-color: @sea-shell;
+    a{
+        text-decoration: none;
+        color:black;
+        font-size: 20px;
+        margin: 10px;
+        padding:2%;
+
+    }
+}
+.Top-section{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    
+
+  h1{
+      font-size: 40px;
+      margin-left: 480px;
+      padding-top: 3%;
+      }
+  }  
 }
